trunk/Archive2/14/75d2d598e2c223/output
main.cpp:16:5: error: no member named 'f' in namespace 'N'; did you mean simply 'f'?
    N::f();
    ^~~~
    f
main.cpp:3:6: note: 'f' declared here
void f();
     ^
1 error generated.
